--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,8 @@
 
 	<groupId>com.yiibai.primera.testng</groupId>
 	<artifactId>PrimeraAutoTest</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2</version>
+	<description>POM was created from a script</description>
 	<packaging>jar</packaging>
 
 	<name>PrimeraAutoTest</name>
@@ -29,17 +30,11 @@
 			<version>6.8.7</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>com.google.inject</groupId>
-			<artifactId>guice</artifactId>
-			<version>4.0</version>
-			<scope>test</scope>
-		</dependency>
 		<!-- 依赖reportNg 关联testNg -->
 		<dependency>
 			<groupId>org.uncommons</groupId>
 			<artifactId>reportng</artifactId>
-			<version>1.1.5</version>
+			<version>1.1.4</version>
 			<scope>test</scope>
 			<exclusions>
 				<exclusion>
@@ -82,6 +77,11 @@
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
 			<version>2.44.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-support</artifactId>
+			<version>3.5.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -131,16 +131,6 @@
 	<build>
 		<plugins>
 			<!-- 添加插件 关联testNg.xml -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.17</version>
-				<configuration>
-					<suiteXmlFiles>
-						<suiteXmlFile>xmlfile/testng.xml</suiteXmlFile>
-					</suiteXmlFiles>
-				</configuration>
-			</plugin>
 			<!-- 添加插件,添加ReportNg的监听器，修改最后的TestNg的报告 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -160,6 +150,9 @@
 					</properties>
 					<workingDirectory>target/</workingDirectory>
 					<forkMode>always</forkMode>
+					<suiteXmlFiles>
+						<suiteXmlFile>xmlfile/testng.xml</suiteXmlFile>
+					</suiteXmlFiles>
 				</configuration>
 			</plugin>
 		</plugins>
