--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,7 @@
 
 	<groupId>com.yiibai.primera.testng</groupId>
 	<artifactId>PrimeraAutoTest</artifactId>
-	<version>0.0.2</version>
-	<description>POM was created from a script</description>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>PrimeraAutoTest</name>
@@ -20,7 +19,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- 依赖testNg -->
@@ -71,17 +70,12 @@
 		<dependency>
 			<groupId>io.appium</groupId>
 			<artifactId>java-client</artifactId>
-			<version>5.0.0-BETA6</version>
+			<version>4.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
 			<version>2.44.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-support</artifactId>
-			<version>3.5.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -135,10 +129,20 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
+				<version>2.19</version>
+				<dependencies>
+				    <dependency>
+				        <groupId>org.apache.maven.surefire</groupId>
+				        <artifactId>surefire-junit47</artifactId>
+				        <version>2.19</version>
+				    </dependency>
+				</dependencies>
 				<configuration>
+					<suiteXmlFiles>
+						<suiteXmlFile>xmlfile/testng.xml</suiteXmlFile>
+					</suiteXmlFiles>
 					<properties>
-						<property>
+						<!-- <property>
 							<name>usedefaultlisteners</name>
 							<value>false</value>
 						</property>
@@ -146,13 +150,13 @@
 							<name>listener</name>
 							<value>org.uncommons.reportng.HTMLReporter,
 								org.uncommons.reportng.JUnitXMLReporter</value>
-						</property>
+						</property> -->
+						<properties>
+					        <xmlFileName></xmlFileName>
+					    </properties>
 					</properties>
-					<workingDirectory>target/</workingDirectory>
-					<forkMode>always</forkMode>
-					<suiteXmlFiles>
-						<suiteXmlFile>xmlfile/testng.xml</suiteXmlFile>
-					</suiteXmlFiles>
+					<!-- <workingDirectory>target/</workingDirectory>
+					<forkMode>always</forkMode> -->
 				</configuration>
 			</plugin>
 		</plugins>
