--- a/pom.xml
+++ b/pom.xml
@@ -3,31 +3,26 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.yiibai.primera.testng</groupId>
-	<artifactId>PrimeraAutoTest</artifactId>
+	<artifactId>PrimeraAuto</artifactId>
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
-	<name>PrimeraAutoTest</name>
+	<name>PrimeraAuto</name>
 	<url>http://maven.apache.org</url>
-	<!-- maven 参数配置，这里引用不同的testng.xml -->
+	<!-- maven 参数配置，这里可以引用不同的testng.xml -->
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<xmlFileName>xmlfile/testng.xml</xmlFileName>
 	</properties>
 	<!-- maven 引用依赖不同的jar -->
 	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
+		<!-- <dependency> <groupId>junit</groupId> <artifactId>junit</artifactId> 
+			<version>4.12</version> <scope>test</scope> </dependency> -->
 		<!-- 依赖testNg -->
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>6.8.7</version>
-			<scope>test</scope>
+			<version>6.9.9</version>
+			<scope>compile</scope>
 		</dependency>
 		<!-- 依赖reportNg 关联testNg -->
 		<dependency>
@@ -58,6 +53,7 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
+			<scope>provided</scope>
 		</dependency>
 		<!-- appium 测试依赖的jars -->
 		<!-- exception:java.lang.NoSuchMethodError: com.google.common.collect.ImmutableSet -->
@@ -115,11 +111,8 @@
 			<version>3.3.1</version>
 		</dependency>
 		<!-- uiautomator -->
-		<!-- <dependency>
-			<groupId>com.android</groupId>
-			<artifactId>uiautomator</artifactId>
-			<version></version>
-		</dependency> -->
+		<!-- <dependency> <groupId>com.android</groupId> <artifactId>uiautomator</artifactId> 
+			<version></version> </dependency> -->
 	</dependencies>
 
 	<build>
@@ -128,37 +121,64 @@
 			<!-- 添加插件,添加ReportNg的监听器，修改最后的TestNg的报告 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin/</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<compilerId>eclipse</compilerId>
+					<encoding>UTF-8</encoding> 
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.codehaus.plexus</groupId>
+						<artifactId>plexus-compiler-eclipse</artifactId>
+						<version>2.2</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+			<!-- <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.0.2</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+						<phase>package</phase>
+					</execution>
+				</executions>
+			</plugin> -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin/</artifactId>
+				<version>2.16</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.19</version>
 				<dependencies>
-				    <dependency>
-				        <groupId>org.apache.maven.surefire</groupId>
-				        <artifactId>surefire-junit47</artifactId>
-				        <version>2.19</version>
-				    </dependency>
+					<dependency>
+						<groupId>org.apache.maven.surefire</groupId>
+						<artifactId>surefire-junit47</artifactId>
+						<version>2.19</version>
+					</dependency>
 				</dependencies>
 				<configuration>
-					<suiteXmlFiles>
-						<suiteXmlFile>xmlfile/testng.xml</suiteXmlFile>
-					</suiteXmlFiles>
-					<properties>
-						<!-- <property>
-							<name>usedefaultlisteners</name>
-							<value>false</value>
-						</property>
-						<property>
-							<name>listener</name>
-							<value>org.uncommons.reportng.HTMLReporter,
-								org.uncommons.reportng.JUnitXMLReporter</value>
-						</property> -->
-						<properties>
-					        <xmlFileName></xmlFileName>
-					    </properties>
-					</properties>
-					<!-- <workingDirectory>target/</workingDirectory>
-					<forkMode>always</forkMode> -->
+					<includes>
+						<include>XXXTest.java</include>
+					</includes>
 				</configuration>
 			</plugin>
 		</plugins>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh-external</artifactId>
+				<version>2.9</version>
+			</extension>
+		</extensions>
 	</build>
 </project>
